...
          description={text.homeSupportUsDescription}
          centerText
          bgBottomLeft={homeSupportUsBgBottomLeft}
          bgTopRight={homeSupportUsBgTopRight}
          navigation={navigation}
          url={SUPPORT_US}
          testID="home-header-support-us-button"
        />
      </ContentPadding>
    </View>
  );
};

...
