...
    // Never show more than 6 events.
    const eventsCount = Math.min(6, Math.floor(featuredEvents.length / 2) * 2);
    const events = featuredEvents.slice(0, eventsCount);

    return (
      <View>
        <ScrollView testID="home-screen" style={styles.container}>
          <View style={styles.content}>
            <Header
              headerBanners={headerBanners}
              getImageDetails={getImageDetails}
              navigation={navigation}
            />
...
