...
              {text.noSavedEventsPart1}&nbsp;
              <Image style={styles.heart} source={iconSave} />
              &nbsp;{text.noSavedEventsPart2}
            </Text>
            <ButtonPrimary
              onPress={this.eventList}
              testID="no-saved-events-button"
            >
              {text.noSavedEventsButton}
            </ButtonPrimary>
          </LayoutColumn>
        </ContentPadding>
      </ScrollView>
...
