...
        <ContentPadding>
          <View>
            <ResetAllFiltersButton
              visible={anyAppliedFilters}
              onPress={this.resetAllFilters}
            />
            <View testID="event-filter-header" style={styles.content}>
              <FilterHeaderCategories
                onFilterPress={onFilterCategoriesPress}
                selectedCategories={selectedCategories}
              />
            </View>
          </View>
...
