...
    const groupSponsors = R.groupBy(
      sponsor => sponsor.fields.sponsorLevel,
      sortByName(sponsors)
    );

    return (
      <View style={styles.container} testID="sponsor-screen">
        <Header
          leftElement={
            <Header.BackButton
              onPress={() => {
                navigation.goBack(null);
              }}
...
