...
      </ScrollView>
    );
  }

  render() {
    return (
      <View style={styles.container} testID="donate-screen">
        {this.renderHeader()}
        <KeyboardAvoidingView behavior="padding" enabled style={styles.content}>
          {this.renderContent()}
        </KeyboardAvoidingView>
      </View>
    );
...
